# openconnect

./: .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  .source-sha256sums  Makefile.am  Makefile.dlldeps  README.md  TODO  acinclude.m4  aesni-esp.c  aesni-esp.h  array.c  auth-common.c  auth-globalprotect.c  auth-html.c  auth-juniper.c  auth.c  compat.c  configure.ac  cstp.c  digest.c  dtls.c  esp-seqno.c  esp.c  export-strings.sh  f5.c  forkWindows.c  forkWindows.h  fortinet.c  gensymbols.sed  gnutls-dtls.c  gnutls-esp.c  gnutls.c  gnutls.h  gnutls_tpm.c  gnutls_tpm2.c  gnutls_tpm2_esys.c  gnutls_tpm2_ibm.c  gpst.c  (+62 more)
.copr/: Makefile
.deb/: changelog  control  copyright  libopenconnect5.shlibs  libopenconnect5.symbols  not-installed  openconnect.NEWS  openconnect.doc-base  openconnect.install  openconnect.lintian-overrides  rules  watch
.deb/tests/: control  upstream-test-suite
.obs/: _service  openconnect.dsc  openconnect.spec  workflows.yml
.obs/debian/: changelog  control  copyright  libopenconnect-dev.install  libopenconnect5.install  openconnect.install  rules
aesni/: x86_64cpuid.pl
android/: Makefile  fetch.sh  install_symlink.sh  run_pie.c
android/sysroot-patches/: 00-time.h.patch
java/: README
java/src/com/example/: LibTest.java
java/src/org/infradead/libopenconnect/: LibOpenConnect.java
json/: json.c
m4/: as-compiler-flag.m4
po/: LINGUAS  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bg_BG.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  es_CR.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gd.po  gl.po  gu.po  he.po  (+71 more)
tests/: Makefile.am  adapter-fallback.c  auth-certificate  auth-f5  auth-fortinet  auth-hwtpm  auth-multicert  auth-nonascii  auth-pkcs11  auth-swtpm  auth-username-pass  autocompletion  bad_dtls_test.c  buftest.c  cert-fingerprint  common.sh  dtls-psk  esptest.c  f5-auth-and-config  fake-cisco-server.py  fake-f5-server.py  fake-fortinet-server.py  fake-gp-server.py  fake-juniper-server.py  fake-juniper-sso-server.py  fake-pulse-server.py  fake-tncc.py  fortinet-auth-and-config  gp-auth-and-config  id-test  juniper-auth  juniper-sso-auth  list-system-keys.c  list-taps.c  lzstest.c  oath-token  obsolete-server-crypto  pfs  ppp-over-tls  ppp-over-tls-sync  (+7 more)
tests/certs/: ca.pem  dsa-cert.pem  dsa-key-aes256-cbc-sha256.p12  ec-cert.pem  ec-key-aes256-cbc-sha256.p12  ec-key-swtpm.pem  server-cert.pem  swtpm-ec-cert.pem  swtpm-ec-key-tpm.pem  swtpm-ec-p384-cert.pem  swtpm-ec-p384-key-tpm.pem  swtpm-rsa-cert.pem  swtpm-rsa-key-tpm.pem  user-cert.pem  user-key-aes256-cbc-md5-des-sha256.p12  user-key-aes256-cbc-sha256.p12  user-key-md5-des-sha1.p12  user-key-nonascii-password.p12  user-key-sha1-3des-sha1.p12  user-key-sha1-3des-sha256.p12
tests/configs/: ca.prm  test-dtls-psk.config  test-obsolete-server-crypto.config  test-obsolete-server-crypto.config.in  test-user-cert.config.in  test-user-pass.config.in
tests/scripts/: vpnc-script  vpnc-script-detect-disconnect
tests/softhsm/20526acd-3d1b-8363-eb79-163b3233387a/: 1f566862-7d38-6857-7794-3526358c875e.object  token.object
tests/softhsm/32189381-01d2-550b-8c0c-ccc58244a0c4/: 0b278e17-20f1-53ee-5488-4e5bf7207a5d.object  320d550f-019a-0fbd-cdca-300e888f91d7.object  token.object
tests/softhsm/340020a8-6289-ead5-d93a-3d77c9fb819a/: 36c79317-f45d-9f97-2ccd-5fc5c9340bf9.object  e540b3f8-7a94-760f-4d0c-19bd423a04c2.object  fce03cbe-6429-758b-2587-55195739933a.object  token.object
tests/softhsm/e0a4adf3-068e-288d-1c53-a97935ad11e7/: 6582bb63-3ada-cb64-b8f0-1fe0040b1863.object  95571d18-2e2d-d9c2-0fc2-866e2fa91bf0.object  ab9979a8-b020-37f3-312e-a620d2915fd3.object  token.object
trojans/: csd-post.sh  csd-wrapper.sh  hipreport-android.sh  hipreport.sh  tncc-emulate.py  tncc-wrapper.py
www/: Makefile.am  anyconnect.xml  array.xml  building.xml  changelog.xml  connecting.xml  contribute.xml  csd.xml  download.xml  f5.xml  features.xml  fortinet.xml  globalprotect.xml  gui.xml  hip.xml  html.py  index.xml  juniper.xml  licence.xml  mail.xml  manual.xml  menu1.xml  menu2-contribute.xml  menu2-protocols.xml  mitm.xml  nonroot.xml  packages.xml  pkcs11.xml  platforms.xml  protocols.xml  pulse.xml  tncc.xml  token.xml  tpm.xml  vpnc-script.xml
www/images/: Makefile.am
www/inc/: Makefile.am  header.tmpl
www/styles/: Makefile.am  main.css
